...
            "state" : "translated",
            "value" : "AI 與隱私"
          }
        }
      }
    },
    "AI 助手" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "AI Assistant"
          }
...
            "state" : "translated",
            "value" : "從佇列移除"
          }
        }
      }
    },
    "会话" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Conversations"
          }
...
            "state" : "translated",
            "value" : "會話"
          }
        }
      }
    },
    "会话列表" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Conversation List"
          }
...
            "state" : "translated",
            "value" : "權限：%@"
          }
        }
      }
    },
    "设备支持 Core Haptics" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Device Supports Core Haptics"
          }
...
            "state" : "translated",
            "value" : "裝置支援 Core Haptics"
          }
        }
      }
    },
    "设置" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "value" : "音樂庫"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "音乐库"
          }
        }
      }
    },
    "资料库与播放" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "資料類型"
          }
        }
      }
    },
    "跟随全局设置" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Follow Global Settings"
...
            "state" : "translated",
            "value" : "音樂震動"
          }
        }
      }
    },
    "音乐震动反馈" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Music Haptics Feedback"
          }
...
